fix hero text overlap on background image

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -252,7 +252,7 @@ body::-webkit-scrollbar {
   }
 
   @media only screen and (min-width: 1422px) {
-    margin-left: 12%;
+    margin-left: 5%;
   }
 
   @media only screen and (max-width: 1024px) {
